; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-snap-persistent.c_area_io.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-snap-persistent.c_area_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pstore = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pstore*, i32)* @area_io to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @area_io(%struct.pstore* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pstore*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pstore* %0, %struct.pstore** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.pstore*, %struct.pstore** %4, align 8
  %9 = load %struct.pstore*, %struct.pstore** %4, align 8
  %10 = getelementptr inbounds %struct.pstore, %struct.pstore* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @area_location(%struct.pstore* %8, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load %struct.pstore*, %struct.pstore** %4, align 8
  %14 = load %struct.pstore*, %struct.pstore** %4, align 8
  %15 = getelementptr inbounds %struct.pstore, %struct.pstore* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @chunk_io(%struct.pstore* %13, i32 %16, i32 %17, i32 %18, i32 0)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %2
  %23 = load i32, i32* %6, align 4
  store i32 %23, i32* %3, align 4
  br label %25

24:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %22
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @area_location(%struct.pstore*, i32) #1

declare dso_local i32 @chunk_io(%struct.pstore*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
